# bbb

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/versions/: 42334e50263a_create_subscribers_table.py
src/adapters/: db_adapter.py
src/controllers/: subscribers_controller.py
src/models/: subscriber.py
src/repositories/: subscriber_repository.py
src/tests/: conftest.py
src/tests/models/: test_subscriber.py
src/tests/requests/: test_subscribers_request.py
