[tool.poetry]
name = "bbb"
version = "0.1.0"
description = "Projeto de Desenvolvedor - Globo"
authors = ["Caio Vitor Santos <caiovitor.santos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
flask-jsonpify = "^1.5.0"
flask-sqlalchemy = "^3.1.1"
flask-restful = "^0.3.10"
flask-cors = "^5.0.0"
flask-migrate = "^4.0.7"
pytest = "^8.3.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"